--- a/package.json
+++ b/package.json
@@ -5,22 +5,24 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server/index.js",
-    "build": "webpack"
+    "build-prod": "webpack --config webpack.prod.js",
+    "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
+    "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "html-webpack-plugin": "^5.5.1",
+    "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^4.15.0"
   }
 }
