--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@babel/preset-env": "^7.22.4",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.1",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.1",
+    "style-loader": "^3.3.3",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
