--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.1",
+    "mini-css-extract-plugin": "^2.7.6",
     "node-sass": "^9.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass-loader": "^13.3.1",
     "style-loader": "^3.3.3",
+    "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
