--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0"
+    "webpack-dev-server": "^4.15.0",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
